.metadata/.plugins/org.eclipse.cdt.ui/ledprojesi.build.log
11:15:42 **** Incremental Build of configuration Debug for project ledprojesi ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/stm32l4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L433xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32l4xx_it.d" -MT"Core/Src/stm32l4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32l4xx_it.o"
../Core/Src/stm32l4xx_it.c: In function 'SysTick_Handler':
../Core/Src/stm32l4xx_it.c:186:5: error: 'milliseconds' undeclared (first use in this function)
  186 |     milliseconds++;
      |     ^~~~~~~~~~~~
../Core/Src/stm32l4xx_it.c:186:5: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/stm32l4xx_it.c:188:9: error: 'adjustmentMode' undeclared (first use in this function)
  188 |     if (adjustmentMode) {
      |         ^~~~~~~~~~~~~~
../Core/Src/stm32l4xx_it.c:190:29: error: 'buttonPressStart' undeclared (first use in this function)
  190 |         if ((milliseconds - buttonPressStart) >= 20000) {
      |                             ^~~~~~~~~~~~~~~~
../Core/Src/stm32l4xx_it.c:191:30: error: 'false' undeclared (first use in this function)
  191 |             adjustmentMode = false;
      |                              ^~~~~
../Core/Src/stm32l4xx_it.c:192:13: error: 'buttonPressCount' undeclared (first use in this function)
  192 |             buttonPressCount = 0; // Force updating the clock when exiting adjustment mode
      |             ^~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/stm32l4xx_it.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

11:15:42 Build Failed. 6 errors, 0 warnings. (took 373ms)

